--- a/src/app/views/bash/components/command-handler/command-handler.component.html
+++ b/src/app/views/bash/components/command-handler/command-handler.component.html
@@ -1,19 +1,25 @@
 <form [formGroup]="bashCommandForm" (ngSubmit)="onSubmit()">
-  <div class="command-handler">
+  <div class="command-handler-container">
     <label for="command">Command: </label>
-    <input id="command" type="text" formControlName="command" required>
-    <div *ngIf="command?.invalid && (command?.dirty || command?.touched)">
-      <div *ngIf="command?.errors?.required">
-        Name is required.
+    <div class="command-handler-form">
+      <div class="command-handler-input">
+        <input id="command" type="text" formControlName="command" required>
+        <div class="command-form-error-message">
+          <div *ngIf="command?.invalid && (command?.dirty || command?.touched)">
+            <div *ngIf="command?.errors?.required">
+              Name is required.
+            </div>
+          </div>
+          <div *ngIf="badCommand.length">
+            {{ badCommand }}
+          </div>
+        </div>
       </div>
+      <button type="submit" [disabled]="command?.errors?.required">
+        <span *ngIf="!loading; else showSpinner">Submit</span>
+        <ng-template #showSpinner><mat-spinner [diameter]="20"></mat-spinner></ng-template>
+      </button>
     </div>
-    <div *ngIf="badCommand.length">
-      {{ badCommand }}
-    </div>
-    <button type="submit" [disabled]="command?.errors?.required">
-      <span *ngIf="!loading; else showSpinner">Submit</span>
-      <ng-template #showSpinner><mat-spinner></mat-spinner></ng-template>
-    </button>
   </div>
   <div class="result-handler">
     <label for="result">Result: </label>
