Update styles for submit button

--- a/src/app/views/bash/components/command-handler/command-handler.component.scss
+++ b/src/app/views/bash/components/command-handler/command-handler.component.scss
@@ -39,6 +39,7 @@ form {
         height: 28px;
         background: white;
         color: $base-color;
+        font-size: 15px;
       }
 
       .command-handler-input {
