update styles for bad command and for form error messages

--- a/src/app/views/bash/components/command-handler/command-handler.component.html
+++ b/src/app/views/bash/components/command-handler/command-handler.component.html
@@ -10,7 +10,7 @@
               Name is required.
             </div>
           </div>
-          <div *ngIf="badCommand.length">
+          <div class="bad-command" *ngIf="badCommand.length">
             {{ badCommand }}
           </div>
         </div>
