--- a/src/app/views/bash/components/command-handler/command-handler.component.scss
+++ b/src/app/views/bash/components/command-handler/command-handler.component.scss
@@ -1,4 +1,6 @@
 $base-color: #302b63;
+$disabled-color-background: #D0D1D2;
+$disabled-color-font: #6357CE;
 
 @mixin base-border {
   border-radius: 5px;
@@ -40,6 +42,10 @@ form {
         background: white;
         color: $base-color;
         font-size: 15px;
+
+        &[disabled] {
+          background: $disabled-color-background;
+        }
       }
 
       .command-handler-input {
@@ -57,6 +63,11 @@ form {
 
         .command-form-error-message {
           height: 25px;
+          color: red;
+        }
+
+        .bad-command {
+          color: red;
         }
       }
     }
