--- a/src/app/views/bash/bash.component.scss
+++ b/src/app/views/bash/bash.component.scss
@@ -7,7 +7,7 @@
   border-radius: 10px;
   box-shadow: 1px 1px 8px 2px rgba(0,0,0,0.75);
 
-  app-command-handler {
+  app-command {
     min-height: 100%;
     min-width: 100%;
   }
