--- a/src/app/views/bash/components/command-handler/command.component.html
+++ b/src/app/views/bash/components/command-handler/command.component.html
@@ -4,13 +4,13 @@
     <div class="command-handler-form">
       <div class="command-handler-form-input">
         <input id="command" type="text" formControlName="command" required>
-        <div class="command-handler-form-error-message">
+        <div class="command-handler-form-error">
           <div *ngIf="command?.invalid && (command?.dirty || command?.touched)">
-            <div *ngIf="command?.errors?.required">
+            <div class="command-handler-form-error-message" *ngIf="command?.errors?.required">
               Name is required.
             </div>
           </div>
-          <div class="bad-command" *ngIf="badCommand.length">
+          <div class="command-handler-form-bad-command" *ngIf="badCommand.length">
             {{ badCommand }}
           </div>
         </div>
